tests/tests/snapshots/integration__run_images@overlay3.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/overlay3.gleam
---
<svg width="72.0" height="68.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 35.596748 0.0 L 71.193496 25.862551 L 57.596748 67.709038 L 13.596748 67.709038 L 0.0 25.862551 Z" fill="rgba(250, 250, 255, 1.0)" />
    <g>
      <path d="M 35.596748 4.616525 L 66.339394 26.952365 L 54.596748 63.092513 L 16.596748 63.092513 L 4.854102 26.952365 Z" fill="rgba(200, 200, 255, 1.0)" />
      <g>
        <path d="M 35.596748 9.233051 L 61.485292 28.042179 L 51.596748 58.475987 L 19.596748 58.475987 L 9.708204 28.042179 Z" fill="rgba(150, 150, 255, 1.0)" />
        <g>
          <path d="M 35.596748 13.849576 L 56.63119 29.131992 L 48.596748 53.859462 L 22.596748 53.859462 L 14.562306 29.131992 Z" fill="rgba(100, 100, 255, 1.0)" />
          <path d="M 35.596748 18.466101 L 51.777088 30.221806 L 45.596748 49.242937 L 25.596748 49.242937 L 19.416408 30.221806 Z" fill="rgba(50, 50, 255, 1.0)" />
        </g>
      </g>
    </g>
  </g>
</svg>
