tests/tests/snapshots/integration__run_images@overlay_align2.gleam.snap
---
source: sgleam-core-tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: sgleam-core-tests/tests/images/overlay_align2.gleam
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0.0 0.0 L 50.0 0.0 L 50.0 50.0 L 0.0 50.0 Z" fill="rgba(46, 139, 87, 1.0)" />
    <g>
      <path d="M 10.0 10.0 L 50.0 10.0 L 50.0 50.0 L 10.0 50.0 Z" fill="rgba(192, 192, 192, 1.0)" />
      <g>
        <path d="M 20.0 20.0 L 50.0 20.0 L 50.0 50.0 L 20.0 50.0 Z" fill="rgba(46, 139, 87, 1.0)" />
        <path d="M 30.0 30.0 L 50.0 30.0 L 50.0 50.0 L 30.0 50.0 Z" fill="rgba(192, 192, 192, 1.0)" />
      </g>
    </g>
  </g>
</svg>
