tests/tests/snapshots/integration__run_images@overlay_align_offset1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/overlay_align_offset1.gleam
---
<svg width="137.0" height="137.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 136.27503 106.27503 A 30.0 30.0 0.0 0 1 76.27503 106.27503 A 30.0 30.0 0.0 0 1 136.27503 106.27503 Z" fill="rgba(100, 149, 237, 1.0)" />
    <path d="M 53.137515 126.27503 L 6.18034 92.158645 L 6.18034 34.116385 L 53.137515 0.0 L 108.338985 17.936045 L 126.27503 73.137515 L 92.158645 120.09469 L 34.116385 120.09469 L 0.0 73.137515 L 17.936045 17.936045 L 73.137515 0.0 L 120.09469 34.116385 L 120.09469 92.158645 L 73.137515 126.27503 L 17.936045 108.338985 L 0.0 53.137515 L 34.116385 6.18034 L 92.158645 6.18034 L 126.27503 53.137515 L 108.338985 108.338985 Z" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
