tests/tests/snapshots/integration__run_images@overlay_xy1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/overlay_xy1.gleam
---
<svg width="40.0" height="20.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 20.5 0.5 L 40.5 0.5 L 40.5 20.5 L 20.5 20.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
    <path d="M 0.5 0.5 L 20.5 0.5 L 20.5 20.5 L 0.5 20.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
  </g>
</svg>
